--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -7430,6 +7430,11 @@
         <file>icons_custom/co2.svg</file>
         <file>img/bg-profile.png</file>
         <file>img/bg-profile.svg</file>
+        <file>img/flower-pot.png</file>
+        <file>img/OrangeBloss_wb.jpg</file>
+        <file>img/plant-sick.png</file>
+        <file>img/overlay-scan.svg</file>
+        <file>img/plant-sick.jpg</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
