💄 Social static preview

--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -7435,6 +7435,9 @@
         <file>img/plant-sick.png</file>
         <file>img/overlay-scan.svg</file>
         <file>img/plant-sick.jpg</file>
+        <file>img/garden.png</file>
+        <file>icons_custom/three-dots-inline.svg</file>
+        <file>icons_custom/blume-circle-green.svg</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
