🔥 Login & account deletion

--- a/blume.qrc
+++ b/blume.qrc
@@ -221,17 +221,20 @@
     <file alias="pages/Plant/qmldir">qml/pages/Plant/qmldir</file>
     <file alias="pages/Posometre.qml">qml/pages/Posometre.qml</file>
     <file alias="pages/Social/App.qml">qml/pages/Social/App.qml</file>
+    <file alias="pages/Social/components/ActionMenuItem.qml">qml/pages/Social/components/ActionMenuItem.qml</file>
     <file alias="pages/Social/components/Avatar.qml">qml/pages/Social/components/Avatar.qml</file>
     <file alias="pages/Social/components/BOutlineTextField.qml">qml/pages/Social/components/BOutlineTextField.qml</file>
     <file alias="pages/Social/components/ButtonImage.qml">qml/pages/Social/components/ButtonImage.qml</file>
     <file alias="pages/Social/components/ButtonImageWithText.qml">qml/pages/Social/components/ButtonImageWithText.qml</file>
     <file alias="pages/Social/components/InputField.qml">qml/pages/Social/components/InputField.qml</file>
     <file alias="pages/Social/components/NativeTextArea.qml">qml/pages/Social/components/NativeTextArea.qml</file>
+    <file alias="pages/Social/components/NiceButton.qml">qml/pages/Social/components/NiceButton.qml</file>
     <file alias="pages/Social/components/RadiusImage.qml">qml/pages/Social/components/RadiusImage.qml</file>
     <file alias="pages/Social/components/TextArea.qml">qml/pages/Social/components/TextArea.qml</file>
     <file alias="pages/Social/components/TextField.qml">qml/pages/Social/components/TextField.qml</file>
     <file alias="pages/Social/components/ToolBarButton.qml">qml/pages/Social/components/ToolBarButton.qml</file>
     <file alias="pages/Social/components/qmldir">qml/pages/Social/components/qmldir</file>
+    <file alias="pages/Social/pages/CloseMyAccountPage.qml">qml/pages/Social/pages/CloseMyAccountPage.qml</file>
     <file alias="pages/Social/pages/FeedDetailsPage.qml">qml/pages/Social/pages/FeedDetailsPage.qml</file>
     <file alias="pages/Social/pages/FeedPage.qml">qml/pages/Social/pages/FeedPage.qml</file>
     <file alias="pages/Social/pages/FindUser.qml">qml/pages/Social/pages/FindUser.qml</file>
@@ -249,6 +252,7 @@
     <file alias="pages/Social/utils/Http.qml">qml/pages/Social/utils/Http.qml</file>
     <file alias="pages/Social/utils/Services.qml">qml/pages/Social/utils/Services.qml</file>
     <file alias="pages/Social/utils/qmldir">qml/pages/Social/utils/qmldir</file>
+    <file alias="pages/Social/widgets/ActionMenuUserAccount.qml">qml/pages/Social/widgets/ActionMenuUserAccount.qml</file>
     <file alias="pages/Social/widgets/FullScreenMedia.qml">qml/pages/Social/widgets/FullScreenMedia.qml</file>
     <file alias="pages/Social/widgets/PostActions.qml">qml/pages/Social/widgets/PostActions.qml</file>
     <file alias="pages/Social/widgets/qmldir">qml/pages/Social/widgets/qmldir</file>
