--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -7438,6 +7438,7 @@
         <file>img/garden.png</file>
         <file>icons_custom/three-dots-inline.svg</file>
         <file>icons_custom/blume-circle-green.svg</file>
+        <file>icons_custom/blumai.svg</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
