--- a/blume.qrc
+++ b/blume.qrc
@@ -268,6 +268,7 @@
     <file alias="popups/PopupDeleteDevice.qml">qml/popups/PopupDeleteDevice.qml</file>
     <file alias="popups/PopupLocationNotification.qml">qml/popups/PopupLocationNotification.qml</file>
     <file alias="popups/PopupMacAddress.qml">qml/popups/PopupMacAddress.qml</file>
+    <file alias="popups/PopupRequestIosPerms.qml">qml/popups/PopupRequestIosPerms.qml</file>
     <file alias="popups/qmldir">qml/popups/qmldir</file>
     <file alias="qmldir">qml/qmldir</file>
     <file alias="services/SqlClient.qml">qml/services/SqlClient.qml</file>
